--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ excerpt_separator: <!--more-->
 
 
 #url: http://shengyang.coding.me/moonbook
-url: https://www.shengyang.xyz
+url: https://www.moonscript.cn
 #url: http://aronbordin.com/neo-hpstr-jekyll-theme
 
 # draw your top menu here
